--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <div class="container">
         <h1>Select a Name</h1>
         <form id="nameForm">
-            <input type="checkbox" id="Anel" value="Anel">
+            <input type="radio" id="Anel" name="name" value="Anel">
             <label for="Anel">Anel</label><br>
-            <input type="checkbox" id="Dana" value="Dana">
+            <input type="radio" id="Dana" name="name" value="Dana">
             <label for="Dana">Dana</label><br>
-            <input type="checkbox" id="Aru_B" value="Aru B">
+            <input type="radio" id="Aru_B" name="name" value="Aru B">
             <label for="Aru_B">Aru B</label><br>
-            <input type="checkbox" id="Aru_S" value="Aru S">
+            <input type="radio" id="Aru_S" name="name" value="Aru S">
             <label for="Aru_S">Aru S</label><br>
-            <input type="checkbox" id="Tomi" value="Tomi">
+            <input type="radio" id="Tomi" name="name" value="Tomi">
             <label for="Tomi">Tomi</label><br>
-            <input type="checkbox" id="Aliia" value="Aliia">
+            <input type="radio" id="Aliia" name="name" value="Aliia">
             <label for="Aliia">Aliia</label><br>
             <button type="button" onclick="confirmSelection()">Confirm</button>
         </form>
